--- a/osp/templates/main.html
+++ b/osp/templates/main.html
@@ -6,13 +6,14 @@
 {% for assignment, repository in context %}
     <span>{{ assignment.name }}</span>
 
-    {% if repository is not none and repository.status.name == "FINISHED" %}
-    <a href="https://github.com/{{ assignment.owner }}/{{ repository.repo_name}}">{{ repository.repo_name }}</a>
+    {% if repository is none %}
+    <span></span>
+    {% elif repository.status.name == "FINISHED" %}
+    <a href="https://github.com/{{ assignment.owner }}/{{ repository.repo_name }}">{{ repository.repo_name }}</a>
     {% elif repository.status.name == "IN_PROGRESS" %}
     <span>Создаётся</span>
     {% elif repository.status.name == "FAILED" %}
     <span>Ошибка</span>
-    {% else %}
     {% endif %}
 
     {% if repository is none %}
